# ECS-Basic-Engine

./: .gitignore  CMakeLists.txt
engine/: AssetsManager.cpp  AssetsManager.hpp  CMakeLists.txt  Defines.hpp  Engine.cpp  Engine.hpp  GMath.cpp  GMath.hpp  IGame.hpp  Jobs.cpp  Jobs.hpp  Renderer.cpp  Renderer.hpp  ThreadSafeRingBuffer.hpp  Window.cpp  Window.hpp
game/: CMakeLists.txt  Components.hpp  EcsManager.cpp  EcsManager.hpp  Entity.hpp  Game.cpp  Game.hpp  IScene.hpp  SceneGame.cpp  SceneGame.hpp  main.cpp
